landing component built

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.8",
+    "redux": "^4.0.1",
     "request": "^2.88.0"
   },
   "devDependencies": {
