--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@sendgrid/mail": "^6.4.0",
     "bcryptjs": "^2.4.3",
     "config": "^3.1.0",
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.8",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "twilio": "^3.31.0"
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
