--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "config": "^3.1.0",
     "express": "^4.16.4",
     "express-validator": "^5.3.1",
+    "googleapis": "^39.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.8",
     "request": "^2.88.0",
